force-app/main/default/objects/Case/fields/Block_Outbound_Emails__c.field-meta.xml
<CustomField>
    <fullName>Block_Outbound_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to prevent outbound emails being sent.</description>
    <inlineHelpText>Tick this box to prevent emails being sent for instance when cases move queues or get closed.</inlineHelpText>
    <label>Block Outbound Emails</label>
    <type>Checkbox</type>
</CustomField>