force-app/main/default/objects/Case/fields/Case_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Case_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if case tracking is one (e.g. mobile and emails to customer)</inlineHelpText>
    <label>Case Tracking</label>
    <type>Checkbox</type>
</CustomField>