force-app/main/default/objects/Case/fields/Case_Tracking_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Tracking_Email__c</fullName>
    <label>Case Tracking Email</label>
    <type>Email</type>
</CustomField>