force-app/main/default/objects/Case/fields/Case_Tracking_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Case_Tracking_Mobile__c</fullName>
    <label>Case Tracking Mobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>