force-app/main/default/objects/Case/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <inlineHelpText>Comments entered by Customer</inlineHelpText>
    <label>Customer Comments</label>
    <type>TextArea</type>
</CustomField>