force-app/main/default/objects/Case/fields/Email_Ref__c.field-meta.xml
<CustomField>
    <fullName>Email_Ref__c</fullName>
    <description>Used to create the [Ref..] tag in emails sent from Salesforce</description>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; ) &amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(RIGHT(Id,10), &quot;0&quot;, &quot;&quot; ) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Ref</label>
    <type>Text</type>
</CustomField>