force-app/main/default/objects/Case/fields/Enquiry_Details__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Details__c</fullName>
    <label>Enquiry Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>