force-app/main/default/objects/Case/fields/External_Contractor_Comments__c.field-meta.xml
<CustomField>
    <fullName>External_Contractor_Comments__c</fullName>
    <inlineHelpText>Comments from contractor</inlineHelpText>
    <label>External Contractor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>