force-app/main/default/objects/Case/fields/Internal_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Team_Comments__c</fullName>
    <label>Internal Team Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>