force-app/main/default/objects/Case/fields/New_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked there is an unread email from the customer. Please check!</inlineHelpText>
    <label>New Email</label>
    <type>Checkbox</type>
</CustomField>