force-app/main/default/objects/Case/fields/Number_of_business_days_to_add__c.field-meta.xml
<CustomField>
    <fullName>Number_of_business_days_to_add__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Number of business days to add</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>