force-app/main/default/objects/Case/fields/Trigger_External_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Trigger_External_Queue_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is marked whenever an email is sent to the customer upon assigning to the external contractor queue. It ensures that duplicate emails do not repeat if it is reassigned a number of times. It&#39;s a &#39;once only&#39; trigger.</description>
    <label>Trigger External Queue Email</label>
    <type>Checkbox</type>
</CustomField>