force-app/main/default/objects/Case/recordTypes/Simple.recordType-meta.xml
<RecordType>
    <fullName>Simple</fullName>
    <active>true</active>
    <businessProcess>PoC process</businessProcess>
    <description>Simple Record to sit as header to further detail</description>
    <label>Simple</label>
</RecordType>