force-app/main/default/objects/Case/recordTypes/Waste.recordType-meta.xml
<RecordType>
    <fullName>Waste</fullName>
    <active>true</active>
    <businessProcess>PoC process</businessProcess>
    <label>Waste</label>
</RecordType>